--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,20 @@
 *::-webkit-input-placeholder {
-	color: #666;
+	color: #000;
 	opacity: 1;
 }
 
 *:-moz-placeholder {
-	color: #666;
+	color: #000;
 	opacity: 1;
 }
 
 *::-moz-placeholder {
-	color: #666;
+	color: #000;
 	opacity: 1;
 }
 
 *:-ms-input-placeholder {
-	color: #666;
+	color: #000;
 	opacity: 1;
 }
 
@@ -418,4 +418,451 @@ form {
 	-moz-filter: grayscale(100%);
 	-ms-filter: grayscale(100%);
 	-o-filter: grayscale(100%);
+}
+.swiper * {
+	box-sizing: border-box;
+}
+.swiper-card .swiper-slide {
+	width: 1260px;
+	margin-right: 210px;
+}
+.swiper-card {
+    margin-right: calc((100vw - 1445px) / 2* -1);
+	margin-bottom: 179px;
+}
+.title-small {
+	font-size: 24px;
+	line-height: 150%;
+	text-transform: uppercase;
+}
+.features-wrap {
+	columns: 2;
+}
+.item-feature strong {
+	display: block;
+}
+.item-feature span {
+	color: #494f40;
+	display: block;
+}
+.item-feature {
+	margin-bottom: 20px;
+	padding-right: 10px;
+}
+.swiper-card .title-small {
+	margin-bottom: 40px;
+}
+.image-slide img {
+	max-width: 100%;
+}
+.text-slide p {
+	margin-bottom: 15px;
+}
+.text-slide p:last-child {
+	margin-bottom: 0;
+}
+.text-slide {
+	max-width: 432px;
+}
+.btn-swipe.swiper-button-next {
+	cursor: url("../img/next.svg")  25 25, auto !important;
+}
+.btn-swipe.swiper-button-prev {
+	cursor: url("../img/prev.svg")  25 25, auto !important;
+}
+.btn-swipe {
+	width: 15%;
+	height: 100%;
+	top: 0;
+	margin: 0;
+	transform: none;
+}
+.btn-swipe::after {
+	display: none;
+}
+.list-projects {
+	max-width: 900px;
+	margin: 0 auto;
+	margin-bottom: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+.item-project {
+	padding: 25px 50px;
+}
+.item-project__image {
+	width: 485px;
+	height: 294px;
+	display: none;
+	z-index: 2;
+	position: absolute;
+	pointer-events: none;
+	transform: translate(-55%, -75%);
+}
+.item-project__image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	font-family: 'object-fit: cover;';
+	transition: all 1s;
+}
+.item-project__name {
+	padding-bottom: 4px;
+	z-index: 5;
+	border-bottom: 1px transparent solid;
+	position: relative;
+	transition: all 0.3s;
+}
+.page-projects {
+	padding-top: 25px;
+	position: relative;
+	z-index: 102;
+}
+.item-project:hover .item-project__name {
+	border-color: #000;
+}
+.page-projects .descr-section,
+.page-projects .title-section {
+	text-align: center;
+}
+.page-projects_services .item-project__name {
+	text-transform: uppercase;
+}
+.descr-section {
+	margin-top: 30px;
+	font-size: 16px;
+	line-height: 150%;
+	text-align: center;
+	color: #494f40;
+}
+.page-projects .descr-section {
+	margin-bottom: 100px;
+}
+.partners {
+	padding-top: 90px;
+	padding-bottom: 150px;
+	background: #f5f5f5;
+}
+.partners .title-section {
+	margin-bottom: 100px;
+	text-align: center;
+}
+.item-partner {
+	height: 170px;
+	padding: 6px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #fff;
+}
+.item-partner img {
+	max-width: 100%;
+	max-height: 100%;
+}
+.row_min {
+	margin: 0 -6px;
+}
+.row_min > div {
+	padding: 0 6px;
+	margin-bottom: 12px;
+}
+.col-min {
+	width: 12.3333%;
+}
+.page-projects_services .text-slide {
+	max-width: 582px;
+}
+.billbord-page {
+	padding-bottom: 100px;
+	min-height: 600px;
+	color: #fff;
+	background-image: url(../img/billbord_page1.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	z-index: 1;
+}
+.billbord-page::after {
+	position: absolute;
+	display: block;
+	content: " ";
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.4);
+	z-index: -1;
+}
+.breadcrumbs {
+	padding: 22px 0;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.breadcrumbs a {
+	color: #000;
+	border-bottom: 1px solid transparent;
+}
+.breadcrumbs a:hover {
+	border-color: #000;
+}
+.breadcrumbs li::after {
+	content: "|";
+	margin: 0 20px;
+}
+.breadcrumbs li:last-child::after {
+	display: none;
+}
+.billbord-page .breadcrumbs a {
+	color: #fff;
+}
+.billbord-page .breadcrumbs a:hover {
+	border-color: #fff;
+}
+.logo-billbord {
+	margin-bottom: 41px;
+	display: inline-block;
+}
+.logo-billbord img {
+	width: 293px;
+	opacity: 0.2;
+	height: auto;
+}
+.billbord-page .title-small {
+	max-width: 744px;
+	padding-bottom: 42px;
+	line-height: 167%;
+	margin: 0 auto;
+	text-align: center;
+}
+.btn-video {
+	width: 76px;
+	height: 76px;
+	border-radius: 50%;
+	display: block;
+	margin: 0 auto;
+	background-image: url(../img/play.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+}
+.btn-video:hover {
+	opacity: 0.7;
+}
+.page-team {
+	padding-top: 204px;
+	padding-bottom: 100px;
+}
+.head-team {
+	margin-bottom: 320px;
+}
+.head-team .row {
+	align-items: center;
+}
+.head-team .title-big {
+	padding-left: 85px;
+}
+.title-big {
+	font-size: 46px;
+	line-height: 55px;
+	text-transform: uppercase;
+}
+.text-page {
+	font-size: 18px;
+	line-height: 200%;
+}
+.head-team .text-page {
+	max-width: 517px;
+}
+.page-team .title-section {
+	margin-bottom: 70px;
+	text-align: center;
+}
+.item-team__image {
+	width: 333px;
+	height: 333px;
+	margin-bottom: 40px;
+	border-radius: 50%;
+}
+.item-team__image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	font-family: 'object-fit: cover;';
+	transition: all 0.7s;
+	border-radius: 50%;
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+}
+.item-team:hover .item-team__image img {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+	-webkit-filter: grayscale(0);
+	-moz-filter: grayscale(0);
+	-ms-filter: grayscale(0);
+	-o-filter: grayscale(0);
+}
+.item-team {
+	margin-bottom: 70px;
+}
+.item-team__title {
+	margin-bottom: 24px;
+	font-size: 18px;
+	line-height: 144%;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+.item-team__descr {
+	max-width: 280px;
+}
+.form-page {
+	padding: 59px 122px;
+	padding-right: 70px;
+	margin-top: 30px;
+	background: #f5f5f5;
+}
+.form-page .title-section {
+	margin-bottom: 82px;
+	font-size: 30px;
+	max-width: 783px;
+	text-align: left;
+	line-height: 153%;
+}
+.form-page .text-page {
+	line-height: 167%;
+	text-transform: uppercase;
+}
+.phone-main {
+	font-size: 32px;
+	margin-top: 18px;
+	line-height: 112%;
+	color: #000;
+	text-transform: uppercase;
+	display: inline-block;
+}
+.text-page.text-page_socials {
+	margin-top: 64px;
+}
+.socials-contacts a {
+	width: 86px;
+	height: 86px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #fff;
+}
+.socials-contacts li {
+	margin-bottom: 26px;
+}
+.socials-contacts li:last-child {
+	margin-bottom: 0;
+}
+.form-page__right .text-page {
+	margin-bottom: 24px;
+	max-width: 503px;
+}
+.item-form {
+	margin-bottom: 14px;
+}
+.item-form textarea,
+.item-form input {
+	height: 48px;
+	padding: 0 22px;
+	font-size: 13px;
+	text-transform: uppercase;
+	width: 100%;
+	border: none;
+	background: #fff;
+	font-family: 'NAMU-Pro';
+	color: #000;
+}
+.form-page__right .row {
+	margin: 0 -6px;
+}
+.form-page__right .row > div {
+	padding: 0 6px;
+}
+.btn-main {
+	height: 48px;
+	padding: 0 30px;
+	border: 1.50px solid #000;
+	background: transparent;
+	font-size: 13px;
+	line-height: 154%;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #000;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	cursor: pointer;
+	transition: all 0.5s;
+	font-family: 'NAMU-Pro';
+}
+.btn-main:hover {
+	color: #fff;
+	background: #000;
+}
+.form-page .btn-main {
+	width: 100%;
+	padding: 0 10px;
+}
+.checkbox {
+	font-size: 12px;
+	line-height: normal;
+	margin-top: 10px;
+	color: #ababab;
+	letter-spacing: normal;
+	display: flex;
+	text-align: left;
+}
+.checkbox label input {
+	position: absolute;
+	z-index: -1;
+	height: 1px !important;
+	width: 1px !important;
+	opacity: 0 !important;
+	margin: 12px 2px 0 7px !important;
+}
+.checkbox label > span {
+	position: relative;
+	padding: 5px 0 0 32px;
+	display: block;
+	cursor: pointer;
+}
+.checkbox label > span:before {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: 0;
+	width: 19px;
+	height: 19px;
+	border: 1px solid #ABABAB;
+	border-radius: 0px;
+	transition: .2s;
+}
+.checkbox label > span:after {
+	content: '';
+	position: absolute;
+	top: 3px;
+	left: 0px;
+	width: 19px;
+	height: 19px;
+	background-image: url(../img/check.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 0;
+	transition: .2s;
+}
+.checkbox label input:checked + span:after {
+	opacity: 1;
 }
