--- a/css/media.css
+++ b/css/media.css
@@ -50,6 +50,134 @@
     .footer__logo img {
         width: 345px;
     }
+    .swiper-card .swiper-slide {
+        width: 1000px;
+        margin-right: 100px;
+    }
+    .swiper-card {
+        margin-right: calc((100vw - 1150px) / 2* -1);
+        margin-bottom: 140px;
+    }
+    .title-small {
+        font-size: 20px;
+    }
+    .swiper-card .title-small {
+        margin-bottom: 25px;
+    }
+    .item-feature {
+        margin-bottom: 15px;
+    }
+    .text-slide {
+        max-width: 394px;
+    }
+    .list-projects {
+        margin-bottom: 40px;
+    }
+    .descr-section {
+        margin-top: 25px;
+        font-size: 14px;
+    }
+    .page-projects .descr-section {
+        margin-bottom: 75px;
+    }
+    .row_min > div {
+        padding: 0 4px;
+        margin-bottom: 8px;
+    }
+    .row_min {
+        margin: 0 -4px;
+    }
+    .item-partner {
+        height: 133px;
+    }
+    .partners .title-section {
+        margin-bottom: 70px;
+    }
+    .partners {
+        padding-top: 70px;
+        padding-bottom: 120px;
+    }
+    .logo-billbord img {
+        width: 255px;
+    }
+    .logo-billbord {
+        margin-bottom: 30px;
+    }
+    .billbord-page .title-small {
+        max-width: 615px;
+        padding-bottom: 30px;
+    }
+    .btn-video {
+        width: 68px;
+        height: 68px;
+    }
+    .billbord-page {
+        padding-bottom: 65px;
+        min-height: 540px;
+    }
+    .page-team {
+        padding-top: 150px;
+        padding-bottom: 70px;
+    }
+    .title-big {
+        font-size: 40px;
+        line-height: 47px;
+    }
+    .head-team .title-big {
+        padding-left: 50px;
+    }
+    .text-page {
+        font-size: 16px;
+    }
+    .head-team {
+        margin-bottom: 215px;
+    }
+    .page-team .title-section {
+        margin-bottom: 55px;
+    }
+    .item-team__image {
+        width: 262px;
+        height: 262px;
+        margin-bottom: 28px;
+    }
+    .item-team__title {
+        margin-bottom: 17px;
+        font-size: 16px;
+    }
+    .item-team {
+        margin-bottom: 45px;
+    }
+    .form-page {
+        padding: 45px 80px;
+        padding-right: 40px;
+        margin-top: 20px;
+    }
+    .form-page .title-section {
+        margin-bottom: 50px;
+        font-size: 26px;
+        max-width: 725px;
+    }
+    .phone-main {
+        font-size: 28px;
+        margin-top: 13px;
+    }
+    .socials-contacts a {
+        width: 76px;
+        height: 76px;
+    }
+    .socials-contacts li {
+        margin-bottom: 17px;
+    }
+    .socials-contacts a img {
+        transform: scale(0.9);
+    }
+    .text-page.text-page_socials {
+        margin-top: 46px;
+    }
+    .form-page__right .text-page {
+        margin-bottom: 16px;
+        max-width: 447px;
+    }
 }
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
@@ -77,6 +205,91 @@
     }
     .wrapper_page {
         padding-top: 70px;
+    }
+    .swiper-card {
+        margin-right: calc((100vw - 888px) / 2* -1);
+        margin-bottom: 90px;
+    }
+    .title-small {
+        font-size: 18px;
+    }
+    .swiper-card .title-small {
+        margin-bottom: 14px;
+    }
+    .swiper-card .swiper-slide {
+        width: 898px;
+        margin-right: 30px;
+    }
+    .partners .title-section {
+        margin-bottom: 50px;
+    }
+    .item-partner {
+        height: 103px;
+    }
+    .partners {
+        padding-top: 60px;
+        padding-bottom: 95px;
+    }
+    .billbord-page {
+        padding-bottom: 55px;
+        min-height: 490px;
+    }
+    .page-team {
+        padding-top: 100px;
+        padding-bottom: 55px;
+    }
+    .head-team .title-big {
+        padding-left: 0;
+    }
+    .title-big {
+        font-size: 34px;
+        line-height: 40px;
+    }
+    .text-page {
+        font-size: 14px;
+    }
+    .head-team {
+        margin-bottom: 145px;
+    }
+    .page-team .title-section {
+        margin-bottom: 40px;
+    }
+    .item-team__image {
+        width: 200px;
+        height: 200px;
+        margin-bottom: 20px;
+    }
+    .item-team__title {
+        margin-bottom: 12px;
+        font-size: 15px;
+    }
+    .item-team {
+        margin-bottom: 30px;
+    }
+    .form-page {
+        padding: 30px 35px;
+        padding-right: 20px;
+        margin-top: 15px;
+    }
+    .phone-main {
+        font-size: 25px;
+        margin-top: 12px;
+    }
+    .socials-contacts a {
+        width: 62px;
+        height: 62px;
+    }
+    .socials-contacts li {
+        margin-bottom: 11px;
+    }
+    .socials-contacts a img {
+        transform: scale(0.7);
+    }
+    .text-page.text-page_socials {
+        margin-top: 28px;
+    }
+    .form-page__right .text-page {
+        max-width: 390px;
     }
 }
 
@@ -124,6 +337,90 @@
     .footer {
         padding-top: 30px;
     }
+    .swiper-card {
+        margin-right: -15px;
+        margin-bottom: 40px;
+    }
+    .item-project {
+        padding: 9px 20px;
+    }
+    .item-project__image {
+        display: none !important;
+    }
+    .list-projects {
+        margin-bottom: 15px;
+    }
+    .btn-swipe {
+        display: none;
+    }
+    .page-projects .title-section {
+        line-height: 140%;
+    }
+    .page-projects .descr-section {
+        margin-bottom: 30px;
+    }
+    .descr-section {
+        margin-top: 16px;
+        font-size: 13px;
+    }
+    .item-partner {
+        height: 78px;
+    }
+    .head-team .title-big {
+        margin-bottom: 20px;
+    }
+    .title-big {
+        font-size: 28px;
+        line-height: 33px;
+    }
+    .page-team {
+        padding-top: 55px;
+        padding-bottom: 50px;
+    }
+    .head-team {
+        margin-bottom: 50px;
+    }
+    .page-team .title-section {
+        line-height: 150%;
+        margin-bottom: 25px;
+    }
+    .item-team {
+        text-align: center;
+    }
+    .item-team__image {
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
+    .item-team__descr {
+        margin: 0 auto;
+    }
+    .item-team {
+        margin-bottom: 20px;
+    }
+    .form-page {
+        padding: 20px 15px;
+    }
+    .form-page .title-section {
+        font-size: 20px;
+        max-width: 600px;
+    }
+    .socials-contacts {
+        display: flex;
+    }
+    .socials-contacts li {
+        margin: 0;
+        margin-right: 15px;
+    }
+    .socials-contacts li:last-child {
+        margin-right: 0;
+    }
+    .form-page .socials-contacts {
+        margin: 15px 0;
+    }
+    .phone-main {
+        font-size: 23px;
+        margin-top: 11px;
+    }
 }
 
 /* Small Devices, Tablets */
@@ -146,6 +443,20 @@
     }
     .title-section {
         font-size: 25px;
+    }
+    .col-min {
+        width: 25%;
+    }
+    .partners {
+        padding-top: 45px;
+        padding-bottom: 65px;
+    }
+    .partners .title-section {
+        margin-bottom: 32px;
+    }
+    .checkbox {
+        justify-content: center;
+        margin-top: 20px;
     }
 }
 
